--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">IntentDemo</string>
+    <string name="str_key1">editTextKey</string>
+    <string name="button_text1">Set Text</string>
+    <string name="editText_str">Enter Text</string>
 </resources>
